@@ -1,2 +1,1 @@
-# Include hook code here
 require 'date_time_text_field_helpers'
